--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+
 /* Default styles */
 body {
-  font-family: Arial, sans-serif;
+  font-family: Roboto;
   background-color: #1a8ab3;
   color: #333;
 }
@@ -59,7 +60,6 @@ h2 {
 img {
   max-width: 100%;
   height: auto;
-
 }
 
 form {
@@ -76,7 +76,7 @@ input[type="number"],
 input[type="email"],
 input[type="password"],
 textarea {
-  width: 100%;
+  width: 30%;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -133,4 +133,47 @@ footer {
   footer {
     padding: 10px;
   }
+}
+@media (max-width: 320px) {
+  /* Styles for screens smaller than 320px */
+  header {
+    padding: 5px;
+  }
+
+  nav ul li a {
+    padding: 3px 8px;
+    font-size: 12px;
+  }
+
+  section {
+    padding: 5px;
+  }
+
+  input[type="submit"] {
+    padding: 3px 8px;
+    font-size: 12px;
+  }
+
+  footer {
+    padding: 5px;
+    font-size: 12px;
+  }
+
+  .work {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    justify-items: center;
+  }
+}
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="password"],
+textarea {
+  width: 80%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
